[gd_scene load_steps=12 format=3 uid="uid://dg48h81de81wc"]

[ext_resource type="Script" path="res://scenes/parameters_screen.gd" id="1_qcuah"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="2_3bvhh"]
[ext_resource type="StyleBox" uid="uid://bmyh6yvafukya" path="res://assets/button_style.tres" id="3_bm84j"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesomeButton.gd" id="4_18fut"]
[ext_resource type="Texture2D" uid="uid://ytcljnydjest" path="res://assets/i18n/flags/en_UK.png" id="5_6hqpi"]
[ext_resource type="PackedScene" uid="uid://dytjnya7i6c47" path="res://scenes/dialogs/select_quantity_dialog.tscn" id="5_36c0x"]
[ext_resource type="Texture2D" uid="uid://dalqcbtvl8ffy" path="res://assets/i18n/flags/fr.png" id="6_tuqvp"]
[ext_resource type="Texture2D" uid="uid://c3glsao5mlwv" path="res://assets/i18n/flags/en_US.png" id="6_xncg2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25hsw"]
bg_color = Color(0.505882, 0.701961, 0.854902, 0.839216)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inncu"]
content_margin_top = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4iul"]
bg_color = Color(0, 0, 0, 0.568627)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ParametersScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -286.5
offset_right = 285.5
offset_bottom = 286.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qcuah")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_25hsw")

[node name="Borders" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Content" type="VBoxContainer" parent="Borders"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="Borders/Content"]
layout_mode = 2

[node name="Control" type="Control" parent="Borders/Content/Top"]
layout_mode = 2

[node name="Label" type="Label" parent="Borders/Content/Top"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_inncu")
text = "Settings"
horizontal_alignment = 1

[node name="ButtonClose" type="Button" parent="Borders/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_3bvhh")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_bm84j")
theme_override_styles/hover = ExtResource("3_bm84j")
theme_override_styles/pressed = ExtResource("3_bm84j")
theme_override_styles/disabled = ExtResource("3_bm84j")
theme_override_styles/focus = ExtResource("3_bm84j")
text = ""
script = ExtResource("4_18fut")
icon_size = 32
icon_name = "xmark"

[node name="Panel" type="Panel" parent="Borders/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_f4iul")

[node name="Borders" type="MarginContainer" parent="Borders/Content/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Settings" type="VBoxContainer" parent="Borders/Content/Panel/Borders"]
layout_mode = 2

[node name="i18n" type="HBoxContainer" parent="Borders/Content/Panel/Borders/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="Borders/Content/Panel/Borders/Settings/i18n"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Language"

[node name="OptionButton" type="OptionButton" parent="Borders/Content/Panel/Borders/Settings/i18n"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "English (UK)"
popup/item_0/icon = ExtResource("5_6hqpi")
popup/item_0/id = 1
popup/item_1/text = "English (US)"
popup/item_1/icon = ExtResource("6_xncg2")
popup/item_1/id = 2
popup/item_2/text = "French"
popup/item_2/icon = ExtResource("6_tuqvp")
popup/item_2/id = 0

[node name="Control" type="Control" parent="Borders/Content/Panel/Borders/Settings"]
layout_mode = 2
size_flags_vertical = 3

[node name="Bottom" type="HBoxContainer" parent="Borders/Content/Panel/Borders/Settings"]
layout_mode = 2
alignment = 2

[node name="ButtonSave" type="Button" parent="Borders/Content/Panel/Borders/Settings/Bottom"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_3bvhh")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_bm84j")
theme_override_styles/hover = ExtResource("3_bm84j")
theme_override_styles/pressed = ExtResource("3_bm84j")
theme_override_styles/disabled = ExtResource("3_bm84j")
theme_override_styles/focus = ExtResource("3_bm84j")
text = ""
script = ExtResource("4_18fut")
icon_size = 32
icon_name = "check"

[node name="SelectQuantityDialog" parent="." instance=ExtResource("5_36c0x")]
visible = false
layout_mode = 1

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="Borders/Content/Top/ButtonClose" to="." method="_on_close"]
[connection signal="pressed" from="Borders/Content/Panel/Borders/Settings/Bottom/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="quantity" from="SelectQuantityDialog" to="." method="_on_select_quantity_dialog_quantity"]
